Topic page anchor link too high issue fix, IE 11 word break issue fix

--- a/wp-content/themes/guny/microsite.css
+++ b/wp-content/themes/guny/microsite.css
@@ -619,6 +619,21 @@ button:hover, button:focus {
   .c-hero-ms__topics__tagline {
     font-size: 1.3125rem; } }
 
+.o-article-ms__topics .u-top-spacing {
+  padding-top: 25px; }
+  @media screen and (min-width: 1024px) {
+    .o-article-ms__topics .u-top-spacing {
+      padding-top: 40px; } }
+
+.o-article-ms__topics .u-bottom-spacing {
+  padding-bottom: 25px; }
+  @media screen and (min-width: 1024px) {
+    .o-article-ms__topics .u-bottom-spacing {
+      padding-bottom: 40px; } }
+
+.o-article-ms__topics h2 {
+  padding-top: 20px; }
+
 .c-nav-list-ms__topics .c-nav-list__link {
   background-color: #3c036f;
   border-color: #7735b2; }
